--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+
     <title>iNotebook - Notes seccured in the cloud</title>
   </head>
   <body>
@@ -44,6 +46,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <!-- font-awesome -->
     <script src="https://kit.fontawesome.com/af4d03a7e6.js" crossorigin="anonymous"></script>
-
+    
+    <!-- cloudinary upload widget
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">   -->
+    </script>
   </body>
 </html>
