--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
+
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
 
     <title>iNotebook - Notes seccured in the cloud</title>
@@ -50,5 +53,8 @@
     <!-- cloudinary upload widget
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">   -->
     </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
+
   </body>
 </html>
