--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +30,7 @@
 
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
 
-    <title>iNotebook - Notes seccured in the cloud</title>
+    <title>NoteHaven - Your Ideas, Elevated.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
