--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     -->
 
 
-    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+  
 
     <title>NoteHaven - Your Ideas, Elevated.</title>
   </head>
@@ -51,8 +51,9 @@
     
     <!-- cloudinary upload widget
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">   -->
-    </script>
-
+    <!-- </script> -->
+    
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
 
   </body>
 </html>
